--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Device: главная страница</title>
-    <link rel="icon" href="img/favicon/favicon.svg" type="image/x-icon">
+    <link rel="icon" href="img/favicon/favicon.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body class="page__body">
@@ -11,11 +11,11 @@
     <header class="page-header">
       <div class="page-header__container">
         <a href="#" tabindex="-1">
-          <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36" tabindex="1">
+          <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
         </a>
         <div class="user-menu">
           <form class="search-form" action="#" method="get">
-            <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
+            <input class="search-form__input" type="text" name="search" placeholder="Текст поиска" required>
             <button class="search-form__button" type="submit">Найти</button>
           </form>
           <ul class="site-login__list">
@@ -50,21 +50,21 @@
                   <img class="popover__image" src="img/products/product-1.png" alt="Любительская селфи-палка" width="39" height="43">
                   <p class="popover__product-name">Любительская селфи-палка</p>
                 </a>
-                <button class="popover__close-button" type="submit"></button>
+                <button class="popover__close-button" type="button"></button>
               </li>
               <li class="popover__item">
                 <a class="popover__link" href="#">
                   <img class="popover__image" src="img/products/product-2.png" alt="Профессиональная селфи-палка" width="39" height="43">
                   <p class="popover__product-name">Профессиональная селфи-палка</p>
                 </a>
-                <button class="popover__close-button" type="submit"></button>
+                <button class="popover__close-button" type="button"></button>
               </li>
             </ul>
             <div class="popover__info">
               <span class="popover__products-quantity">Товаров: 2</span>
               <span class="popover__sum">Сумма: 2000 ₽</span>
             </div>
-            <button class="popover__button" type="submit">Открыть корзину</button>
+            <a class="popover__button" href="#">Открыть корзину</a>
           </div>
         </nav>
       </div>
@@ -76,22 +76,22 @@
             <ol class="products-slider__list">
               <li class="products-slider__item products-slider__item--active">
                 <div class="products-slider__gallery">
-                    <img class="products-slider__img" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
-                    <button class="products-slider__pre-btn">
-                      <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
-                      </svg>
-                      <span class="visually-hidden">назад</span></button>
-                    <button class="products-slider__post-btn">
-                      <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
-                      </svg>
-                      <span class="visually-hidden">вперед</span>
-                    </button>
+                  <img class="products-slider__img" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
+                  <button class="products-slider__pre-btn" type="button">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">назад</span>
+                  </button>
+                  <button class="products-slider__post-btn" type="button">
+                    <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">вперед</span>
+                  </button>
                 </div>
                 <div class="products-slider__card">
-                  <p class="products-slider__description">Порхает как бабочка,
-                    жалит как пчела!</p>
+                  <p class="products-slider__description">Порхает как бабочка, жалит как пчела!</p>
                   <p class="products-slider__text text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
                   </p>
                   <a class="products-slider__link link" href="#">Подробнее</a>
@@ -110,13 +110,13 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
-                  <button class="products-slider__pre-btn">
+                  <button class="products-slider__pre-btn" type="button">
                     <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
                     </svg>
                     <span class="visually-hidden">назад</span>
                   </button>
-                  <button class="products-slider__post-btn">
+                  <button class="products-slider__post-btn" type="button">
                     <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
                     </svg>
@@ -140,13 +140,13 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
-                  <button class="products-slider__pre-btn">
+                  <button class="products-slider__pre-btn" type="button">
                     <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
                     </svg>
                     <span class="visually-hidden">назад</span>
                   </button>
-                  <button class="products-slider__post-btn">
+                  <button class="products-slider__post-btn" type="button">
                     <svg aria-hidden="true" focusable="false" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" fill="black"/>
                     </svg>
@@ -179,13 +179,13 @@
             </ol>
             <ul class="products-slider__buttons-list">
               <li class="products-slider__buttons-item">
-                <button class="product-slider__button product-slider__button--active"></button>
+                <button class="product-slider__button product-slider__button--active" type="button"></button>
               </li>
               <li class="products-slider__buttons-item">
-                <button class="product-slider__button"></button>
+                <button class="product-slider__button" type="button"></button>
               </li>
               <li class="products-slider__buttons-item">
-                <button class="product-slider__button"></button>
+                <button class="product-slider__button" type="button"></button>
               </li>
             </ul>
         </section>
@@ -195,7 +195,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="#">
                 <div class="main-goods__image-wrapper">
-                  <img class="main-goods__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности"></img>
+                  <img class="main-goods__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности">
                 </div>
                 <h3 class="main-goods__title">Виртуальная реальность</h3>
               </a>
@@ -203,7 +203,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="catalog.html">
                 <div class="main-goods__image-wrapper main-goods__image-wrapper--selfie-monopodes">
-                  <img class="main-goods__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
+                  <img class="main-goods__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи">
                 </div>
                 <h3 class="main-goods__title">Моноподы <br> для селфи</h3>
               </a>
@@ -211,7 +211,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="#">
                 <div class="main-goods__image-wrapper">
-                  <img class="main-goods__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера"></img>
+                  <img class="main-goods__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера">
                 </div>
                 <h3 class="main-goods__title">Экшн-камеры</h3>
               </a>
@@ -219,7 +219,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="#">
                 <div class="main-goods__image-wrapper">
-                  <img class="main-goods__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет"></img>
+                  <img class="main-goods__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет">
                 </div>
                 <h3 class="main-goods__title">Фитнес-браслеты</h3>
               </a>
@@ -227,7 +227,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="#">
                 <div class="main-goods__image-wrapper">
-                  <img class="main-goods__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы"></img>
+                  <img class="main-goods__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы">
                 </div>
                 <h3 class="main-goods__title">Умные часы</h3>
               </a>
@@ -235,7 +235,7 @@
             <li class="main-goods__item">
               <a class="main-goods__link" href="#">
                 <div class="main-goods__image-wrapper">
-                  <img class="main-goods__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер"></img>
+                  <img class="main-goods__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер">
                 </div>
                 <h3 class="main-goods__title">Квадрокоптеры</h3>
               </a>
@@ -274,7 +274,7 @@
         <div class="main-content__container">
           <a href="#" class="delivery-info">
               <div class="delivery-info__image-wrapper">
-                <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
+                <img class="delivery-info__image" src="img/icons/truck.svg" width="47" height="31" alt="Грузовик доставляет ваш заказ">
               </div>
               <b class="delivery-info__text">Доставим редкий товар под заказ</b>
               <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -323,8 +323,8 @@
           </div>
           <div class="newsletter-subscribe__body">
             <form class="newsletter-subscribe__form" action="#" method="get">
-              <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail">
-              <button class="newsletter-subscribe__btn">Подписаться</button>
+              <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail" required>
+              <button class="newsletter-subscribe__btn" type="submit">Подписаться</button>
             </form>
             <span class="newsletter-subscribe__span text">Это бесплатно</span>
           </div>
@@ -378,10 +378,11 @@
             <svg width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="page-footer__icon" d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" fill="#FFC700"/></svg>
           </a>
         </div>
+      </div>
     </footer>
     <div class="modal-container modal--close">
       <div class="modal modal-delivery-form">
-        <button class="modal__close-button">
+        <button class="modal__close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <h2 class="modal__title">Доставка под заказ</h2>
@@ -389,35 +390,37 @@
           <div class="modal__upper-inputs">
             <label class="modal__label">
               <span class="modal__label-title">Ваше имя:</span>
-              <input class="modal__input name-input" type="name" placeholder="Введите имя">
+              <input class="modal__input name-input" type="text" name="user-name" placeholder="Введите имя" required>
               <span class="modal__span">Добавьте имя</span>
             </label>
             <label class="modal__label">
               <span class="modal__label-title">Ваш e-mail:</span>
-              <input class="modal__input error email-input" type="email" value="Почта" placeholder="Введите email">
+              <input class="modal__input error email-input" type="email" name="email" value="Почта" placeholder="Введите email" required>
               <span class="error-span error">Забавный у вас адрес</span>
             </label>
           </div>
           <div class="modal__lower-inputs">
             <label class="modal__label">
               <span class="modal__label-title">Что нужно привезти:</span>
-              <input class="modal__input" type="text" placeholder="В свободной форме">
+              <input class="modal__input product-name-input" type="text" name="order" placeholder="В свободной форме" required>
             </label>
-            <label for="quantity-input" class="modal__label">
-              <span class="modal__label-title">
-                <span>Количество:</span>
-                <button class="modal__info" type="button"></button>
-                <div class="popover popover-info">
-                  <p class="popover__text">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям
-                    к провозу багажа.</p>
-                </div>
-              </span>
-              <div class="modal__quantity-wrapper">
+            <div class="modal__quantity-wrapper">
+              <label for="quantity-input">
+                <span class="modal__label-title">
+                  <span>Количество:</span>
+                  <span class="modal__info"></span>
+                  <span class="popover popover-info">
+                    <span class="popover__text">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям
+                     к провозу багажа.</span>
+                  </span>
+                </span>
+              </label>
+              <div class="modal__quantity-input">
                 <button class="modal__minus-btn" type="button"></button>
-                <input id="quantity-input" class="modal__input quantity-input" type="number" value="1">
+                <input id="quantity-input" class="modal__input quantity-input" type="number" name="quantity" value="1" required>
                 <button class="modal__plus-btn" type="button"></button>
               </div>
-            </label>
+            </div>
           </div>
           <button class="modal__button button" type="submit">Отправить</button>
         </form>
